--- a/_css/media.css
+++ b/_css/media.css
@@ -1,7 +1,7 @@
 @charset "UTF 8";
 @font-face {
     font-family: 'textos';
-    src: url("../projeto-playstation-vr/_fonts/GothamLight.ttf");
+    src: url("../_fonts/Gotham-XLight.otf");
 }
 
 p {
